添加语义激光雷达点云接收测试节点semantic_rx

--- a/Star-Searcher/search_planner/search_planner/plan_env/CMakeLists.txt
+++ b/Star-Searcher/search_planner/search_planner/plan_env/CMakeLists.txt
@@ -57,3 +57,10 @@ add_executable(obj_generator
     )
 target_link_libraries(obj_generator 
     ${catkin_LIBRARIES})
+
+add_executable(semantic_rx
+    src/semantic_rx.cpp 
+    )
+target_link_libraries(semantic_rx 
+    ${catkin_LIBRARIES}
+    ${PCL_LIBRARIES})
