添加语义激光雷达相关内容

--- a/Star-Searcher/velodyne_simulator/velodyne_gazebo_plugins/CMakeLists.txt
+++ b/Star-Searcher/velodyne_simulator/velodyne_gazebo_plugins/CMakeLists.txt
@@ -41,6 +41,13 @@ target_link_libraries(gazebo_ros_velodyne_gpu_laser
 )
 target_compile_definitions(gazebo_ros_velodyne_gpu_laser PRIVATE GAZEBO_GPU_RAY=1)
 
+add_library(gazebo_ros_velodyne_semantic_laser src/GazeboRosVelodyneSemanticLaser.cpp)
+target_link_libraries(gazebo_ros_velodyne_semantic_laser
+  ${catkin_LIBRARIES}
+  ${GAZEBO_LIBRARIES}
+  RayPlugin
+)
+
 install(TARGETS gazebo_ros_velodyne_laser gazebo_ros_velodyne_gpu_laser
         LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
