--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 fuae-planner/search_planner/utils/lkh_tsp_solver/resource/single.par
 fuae-planner/search_planner/utils/lkh_tsp_solver/resource/single.txt
 fuae-planner/search_planner/utils/lkh_tsp_solver/resource/single.tsp
+/.cache
