--- a/Star-Searcher/search_planner/search_planner/active_perception/package.xml
+++ b/Star-Searcher/search_planner/search_planner/active_perception/package.xml
@@ -55,6 +55,7 @@
   <build_depend>plan_env</build_depend>
   <build_depend>bspline</build_depend>
   <build_depend>path_searching</build_depend>
+  <build_depend>tuw_multi_robot_router</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -67,6 +68,7 @@
   <exec_depend>plan_env</exec_depend>
   <exec_depend>bspline</exec_depend>
   <exec_depend>path_searching</exec_depend>
+  <exec_depend>tuw_multi_robot_router</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
