--- a/Star-Searcher/search_planner/search_planner/exploration_manager/package.xml
+++ b/Star-Searcher/search_planner/search_planner/exploration_manager/package.xml
@@ -61,6 +61,7 @@
   <build_depend>lkh_tsp_solver</build_depend>
   <build_depend>plan_manage</build_depend>
   <build_depend>quadrotor_msgs</build_depend>
+  <build_depend>tuw_multi_robot_router</build_depend>
 
 
   <build_export_depend>roscpp</build_export_depend>
@@ -78,6 +79,7 @@
   <exec_depend>lkh_tsp_solver</exec_depend>
   <exec_depend>plan_manage</exec_depend>
   <exec_depend>quadrotor_msgs</exec_depend>
+  <exec_depend>tuw_multi_robot_router</exec_depend>
   
 
 
