--- a/Star-Searcher/search_planner/search_planner/plan_env/package.xml
+++ b/Star-Searcher/search_planner/search_planner/plan_env/package.xml
@@ -52,12 +52,16 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>tuw_voronoi_graph</build_depend>
+  <build_depend>tuw_multi_robot_router</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>tuw_voronoi_graph</exec_depend>
+  <exec_depend>tuw_multi_robot_router</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
