添加tuw_multi_robot_router

--- a/Star-Searcher/search_planner/search_planner/plan_manage/CMakeLists.txt
+++ b/Star-Searcher/search_planner/search_planner/plan_manage/CMakeLists.txt
@@ -22,13 +22,14 @@ find_package(catkin REQUIRED COMPONENTS
   traj_utils
   active_perception
   cv_bridge
+  tuw_multi_robot_router
 )
 
 
 catkin_package(
  INCLUDE_DIRS include
  LIBRARIES plan_manage
- CATKIN_DEPENDS plan_env path_searching bspline bspline_opt active_perception traj_utils)
+ CATKIN_DEPENDS plan_env path_searching bspline bspline_opt active_perception traj_utils tuw_multi_robot_router)
 
 include_directories(
   include
