--- a/Star-Searcher/search_planner/search_planner/plan_manage/package.xml
+++ b/Star-Searcher/search_planner/search_planner/plan_manage/package.xml
@@ -59,6 +59,7 @@
   <build_depend>bspline_opt</build_depend>
   <build_depend>active_perception</build_depend>
   <build_depend>traj_utils</build_depend>
+  <build_depend>tuw_multi_robot_router</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -73,6 +74,7 @@
   <exec_depend>bspline_opt</exec_depend>
   <exec_depend>active_perception</exec_depend>
   <exec_depend>traj_utils</exec_depend>
+  <exec_depend>tuw_multi_robot_router</exec_depend>
   
 
 
