--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = Star-Searcher/search_planner/search_planner/tuw_multi_robot/tuw_msgs
 	url = git@github.com:MO-Huang/tuw_msgs.git
 	branch = noetic
+[submodule "Star-Searcher/search_planner/search_planner/tuw_multi_robot/tuw_multi_robot"]
+	path = Star-Searcher/search_planner/search_planner/tuw_multi_robot/tuw_multi_robot
+	url = git@github.com:MO-Huang/tuw_multi_robot.git
